Added the support of Java17 and Java21 in ofbiz trunk code base.
This fix can go on for a long run and we can take whatever time we need for switching the project trunk codebase on Java21.